--- a/EasyIrritatedMind.csproj
+++ b/EasyIrritatedMind.csproj
@@ -36,6 +36,9 @@
     <Reference Include="UnityEngine.InputLegacyModule">
       <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Irritated Mind Fear of Warehouse\Irritated Mind Fear of Warehouse_Data\Managed\UnityEngine.InputLegacyModule.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.ParticleSystemModule">
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Irritated Mind Fear of Warehouse\Irritated Mind Fear of Warehouse_Data\Managed\UnityEngine.ParticleSystemModule.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine.PhysicsModule">
       <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Irritated Mind Fear of Warehouse\Irritated Mind Fear of Warehouse_Data\Managed\UnityEngine.PhysicsModule.dll</HintPath>
     </Reference>
